fix: Korjaa tekstien overflowaaminen flexboxeissa (#441)

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,7 +5,7 @@
 @layer base {
   body {
     @apply vayla-body-text;
-    overflow-wrap: break-word;
+    overflow-wrap: anywhere;
     /* For legacy support */
     word-wrap: break-word;
     -ms-word-break: break-all;
